# software_tools

./: README.md  README_CI_CD.md
.github/workflows/: ci-pipeline.yml
0.2 REPOSITORY_CANDY/: README_02.md
01.IO_flush/: README.md  bash_script.sh  first_io.c
02_MEM_OVERCOMMIT/: README.md  over_commit.c  over_commit.sh
03.RISC-Z/: CMakeLists.txt  README.md  factorial.S  fibonacci.S
1.1.IO_flush/: bash_script.sh
3.B.RISC-Z/: CMakeLists.txt  README.md  factorial.S  unit_tests.c
create_repository/: README.md
fractal/: Makefile  README.md  fractal.c  fractal.h  image.c  image.h  run_tests.sh  test_code.c
fractal/img/: test.pgm
io-flush/: README_1.2_Flush.md  bash_script.sh
mem-overcommit/: README.md  over_commit.sh
repository-candy/: README_02.md
risc-z/: Makefile  README.md  factorial.S  fibonacci.S
